group notification, logout and forgot mail
